// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, enable gitlab 1`] = `
<div>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <MemoizedFormattedMessage
        defaultMessage="Security Settings"
        id="user.settings.security.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      text={
        <MemoizedFormattedMessage
          defaultMessage="Security Settings"
          id="user.settings.security.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      max={null}
      section="password"
      title={
        <MemoizedFormattedMessage
          defaultMessage="Password"
          id="user.settings.security.password"
        />
      }
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(MfaSection)
      active={false}
      areAllSectionsInactive={false}
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-light"
    />
    <Connect(UserAccessTokenSection)
      active={false}
      areAllSectionsInactive={false}
      setRequireConfirm={[MockFunction]}
      updateSection={[Function]}
      user={
        Object {
          "id": "user_id",
        }
      }
    />
    <div
      className="divider-light"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      describe={
        <MemoizedFormattedMessage
          defaultMessage="Email and Password"
          id="user.settings.security.emailPwd"
        />
      }
      max={null}
      section="signin"
      title="Sign-in Method"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
    <br />
    <ToggleModalButton
      className="security-links color--link"
      dialogType={[Function]}
      id="viewAccessHistory"
      modalId="access_history"
    >
      <i
        className="fa fa-clock-o"
        title="Access History Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View Access History"
        id="user.settings.security.viewHistory"
      />
    </ToggleModalButton>
    <ToggleModalButton
      className="security-links color--link mt-2"
      dialogType={[Function]}
      id="viewAndLogOutOfActiveSessions"
      modalId="activity_log"
    >
      <i
        className="fa fa-clock-o"
        title="Active Sessions Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View and Log Out of Active Sessions"
        id="user.settings.security.logoutActiveSessions"
      />
    </ToggleModalButton>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, enable google 1`] = `
<div>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <MemoizedFormattedMessage
        defaultMessage="Security Settings"
        id="user.settings.security.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      text={
        <MemoizedFormattedMessage
          defaultMessage="Security Settings"
          id="user.settings.security.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      max={null}
      section="password"
      title={
        <MemoizedFormattedMessage
          defaultMessage="Password"
          id="user.settings.security.password"
        />
      }
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(MfaSection)
      active={false}
      areAllSectionsInactive={false}
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-light"
    />
    <Connect(UserAccessTokenSection)
      active={false}
      areAllSectionsInactive={false}
      setRequireConfirm={[MockFunction]}
      updateSection={[Function]}
      user={
        Object {
          "id": "user_id",
        }
      }
    />
    <div
      className="divider-light"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      describe={
        <MemoizedFormattedMessage
          defaultMessage="Email and Password"
          id="user.settings.security.emailPwd"
        />
      }
      max={null}
      section="signin"
      title="Sign-in Method"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
    <br />
    <ToggleModalButton
      className="security-links color--link"
      dialogType={[Function]}
      id="viewAccessHistory"
      modalId="access_history"
    >
      <i
        className="fa fa-clock-o"
        title="Access History Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View Access History"
        id="user.settings.security.viewHistory"
      />
    </ToggleModalButton>
    <ToggleModalButton
      className="security-links color--link mt-2"
      dialogType={[Function]}
      id="viewAndLogOutOfActiveSessions"
      modalId="activity_log"
    >
      <i
        className="fa fa-clock-o"
        title="Active Sessions Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View and Log Out of Active Sessions"
        id="user.settings.security.logoutActiveSessions"
      />
    </ToggleModalButton>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, enable office365 1`] = `
<div>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <MemoizedFormattedMessage
        defaultMessage="Security Settings"
        id="user.settings.security.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      text={
        <MemoizedFormattedMessage
          defaultMessage="Security Settings"
          id="user.settings.security.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      max={null}
      section="password"
      title={
        <MemoizedFormattedMessage
          defaultMessage="Password"
          id="user.settings.security.password"
        />
      }
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(MfaSection)
      active={false}
      areAllSectionsInactive={false}
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-light"
    />
    <Connect(UserAccessTokenSection)
      active={false}
      areAllSectionsInactive={false}
      setRequireConfirm={[MockFunction]}
      updateSection={[Function]}
      user={
        Object {
          "id": "user_id",
        }
      }
    />
    <div
      className="divider-light"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      describe={
        <MemoizedFormattedMessage
          defaultMessage="Email and Password"
          id="user.settings.security.emailPwd"
        />
      }
      max={null}
      section="signin"
      title="Sign-in Method"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
    <br />
    <ToggleModalButton
      className="security-links color--link"
      dialogType={[Function]}
      id="viewAccessHistory"
      modalId="access_history"
    >
      <i
        className="fa fa-clock-o"
        title="Access History Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View Access History"
        id="user.settings.security.viewHistory"
      />
    </ToggleModalButton>
    <ToggleModalButton
      className="security-links color--link mt-2"
      dialogType={[Function]}
      id="viewAndLogOutOfActiveSessions"
      modalId="activity_log"
    >
      <i
        className="fa fa-clock-o"
        title="Active Sessions Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View and Log Out of Active Sessions"
        id="user.settings.security.logoutActiveSessions"
      />
    </ToggleModalButton>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, enable openID 1`] = `
<div>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <MemoizedFormattedMessage
        defaultMessage="Security Settings"
        id="user.settings.security.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      text={
        <MemoizedFormattedMessage
          defaultMessage="Security Settings"
          id="user.settings.security.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      max={null}
      section="password"
      title={
        <MemoizedFormattedMessage
          defaultMessage="Password"
          id="user.settings.security.password"
        />
      }
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(MfaSection)
      active={false}
      areAllSectionsInactive={false}
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-light"
    />
    <Connect(UserAccessTokenSection)
      active={false}
      areAllSectionsInactive={false}
      setRequireConfirm={[MockFunction]}
      updateSection={[Function]}
      user={
        Object {
          "id": "user_id",
        }
      }
    />
    <div
      className="divider-light"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      describe={
        <MemoizedFormattedMessage
          defaultMessage="Email and Password"
          id="user.settings.security.emailPwd"
        />
      }
      max={null}
      section="signin"
      title="Sign-in Method"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
    <br />
    <ToggleModalButton
      className="security-links color--link"
      dialogType={[Function]}
      id="viewAccessHistory"
      modalId="access_history"
    >
      <i
        className="fa fa-clock-o"
        title="Access History Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View Access History"
        id="user.settings.security.viewHistory"
      />
    </ToggleModalButton>
    <ToggleModalButton
      className="security-links color--link mt-2"
      dialogType={[Function]}
      id="viewAndLogOutOfActiveSessions"
      modalId="activity_log"
    >
      <i
        className="fa fa-clock-o"
        title="Active Sessions Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View and Log Out of Active Sessions"
        id="user.settings.security.logoutActiveSessions"
      />
    </ToggleModalButton>
  </div>
</div>
`;

exports[`components/user_settings/display/UserSettingsDisplay should match snapshot, to email 1`] = `
<div>
  <SettingMobileHeader
    closeModal={[MockFunction]}
    collapseModal={[MockFunction]}
    text={
      <MemoizedFormattedMessage
        defaultMessage="Security Settings"
        id="user.settings.security.title"
      />
    }
  />
  <div
    className="user-settings"
  >
    <SettingDesktopHeader
      text={
        <MemoizedFormattedMessage
          defaultMessage="Security Settings"
          id="user.settings.security.title"
        />
      }
    />
    <div
      className="divider-dark first"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      max={null}
      section="password"
      title={
        <MemoizedFormattedMessage
          defaultMessage="Password"
          id="user.settings.security.password"
        />
      }
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(MfaSection)
      active={false}
      areAllSectionsInactive={false}
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-light"
    />
    <Connect(UserAccessTokenSection)
      active={false}
      areAllSectionsInactive={false}
      setRequireConfirm={[MockFunction]}
      updateSection={[Function]}
      user={
        Object {
          "auth_service": "openid",
          "id": "user_id",
        }
      }
    />
    <div
      className="divider-light"
    />
    <SettingItem
      active={false}
      areAllSectionsInactive={false}
      describe={
        <MemoizedFormattedMessage
          defaultMessage="OpenID"
          id="user.settings.security.openid"
        />
      }
      max={null}
      section="signin"
      title="Sign-in Method"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
    <br />
    <ToggleModalButton
      className="security-links color--link"
      dialogType={[Function]}
      id="viewAccessHistory"
      modalId="access_history"
    >
      <i
        className="fa fa-clock-o"
        title="Access History Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View Access History"
        id="user.settings.security.viewHistory"
      />
    </ToggleModalButton>
    <ToggleModalButton
      className="security-links color--link mt-2"
      dialogType={[Function]}
      id="viewAndLogOutOfActiveSessions"
      modalId="activity_log"
    >
      <i
        className="fa fa-clock-o"
        title="Active Sessions Icon"
      />
      <MemoizedFormattedMessage
        defaultMessage="View and Log Out of Active Sessions"
        id="user.settings.security.logoutActiveSessions"
      />
    </ToggleModalButton>
  </div>
</div>
`;
